# muon

./: .gitattributes  .gitmodules  LICENSE  README  README.md  main.c  meson.build
common/: bitbase.h  board.h  movegen.c  movegen.h
graphics/: renderer.cc  window.h
src/: bitbase.h  bitboard.h  board.h  fen.h  main.c  makefile  movegen.h
src/common/: bitbase.c  bitboard.h  board.h  gametree.c  gametree.h  movegen.c  movegen.h  unittest.c  unittest.h
src/graphics/: renderer.cc  renderer.h  textures.c  textures.h  window.c  window.h
src/parser/: fen.c  fen.h
